Revert "Merge request licence souboru a master branche"

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,13 +2,10 @@
 
 /* Body a ostatní */
 
-* {
-  font-family: Cairo;
-}
-
 body {
   padding: 0px;
   margin: 0px;
+  font-family: Cairo !important;
 }
 
 .tooltip {
