--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,20 @@
-@import url('https://fonts.googleapis.com/css?family=Cairo|Viga');
+/*
+
+    Lukáš Pánek - Hlavní CSS soubor
+
+*/
+
+@import url('https://fonts.googleapis.com/css?family=Barlow');
 
 /* Body a ostatní */
 
+:root {
+  --main-color: #fe3d3e;
+  --main-color-shade: #c93035;
+}
+
 * {
-  font-family: Cairo;
+  font-family: Barlow;
 }
 
 body {
@@ -15,74 +26,51 @@ body {
   margin-bottom: 5px !important;
 }
 
+
 /* Navigation bar */
 
 @media (max-width: 1350px) { 
-  ul#navigation .center {
+  ul#navigation {
+    padding: 10px 100px !important;
+  }
+}
+
+@media (max-width: 980px) { 
+  div.right-menu {
     display: none;
   }
 }
 
-@media (max-width: 850px) { 
-  ul#navigation {
-    padding-right: 0 !important;
-  }
-  ul#navigation .right {
-    display: none;
-  }
-  ul#navigation .title {
-    display: none;
-  }
+@media (max-width: 650px) { 
   ul#navigation .menu {
-    padding-left: 0 !important;
-    text-align: center;
+    margin-left: 70px !important;
+    margin-top: 6px !important;
   }
-}
 
-@media (max-width: 550px) { 
-  ul#navigation li {
-    display: block !important;
-    padding: 10px;
+  ul#navigation.shown .menu {
+    margin-left: 40px !important;
   }
-  ul#navigation li a {
-    color: #191919 !important;
+
+  ul#navigation .logo {
+    display: none;
   }
-  ul#navigation li+li:before {
-    display: none !important;
+
+  .hidden {
+    width: 60px !important;
   }
-  ul#navigation li.right {
-    display: none !important;
+
+  .shown {
+    width: 100% !important;
+    overflow-x: scroll !important;
   }
+
   ul#navigation {
-    background-color: #fff !important;
-    padding-right: 0px !important;
-    height: 0px !important;
+    padding: 10px 3px !important;
+    white-space: nowrap;
   }
 
-  ul#navigation.hidden {
-    height: 0px;
-    padding: 0px !important;
-  }
-  
-  ul#navigation.hidden li {
-    display: none !important;
-  }
-  
-  ul#navigation.shown {
-    height: auto !important;
-    padding: 20px 0px !important;
-  }
-  
-  ul#navigation.shown li {
-    display: block !important;
-  }
-
-  ul#navigation.shown li.right {
-    display: none !important;
-  }
-
-  i.menu {
-    display: block !important;
+  ul#navigation .menu-icon {
+    display: inline-block !important;
   }
 }
 
@@ -91,36 +79,47 @@ ul#navigation {
   z-index: 10;
   list-style-type: none;
   color: #fff;
-  margin: 0; padding: 20px 0px;
-  padding-right: 25px;
-  width: 100%;
+  margin: 0;
+  padding: 10px 300px;
+  height: 60px;
   transition-duration: 250ms;
+  animation-timing-function: ease-in-out;
+  background: #191919;
+  border-bottom: 5px solid #101010;
+  overflow: hidden;
 }
 
-ul#navigation .title {
-  position: absolute;
-  left: 0; top: 0;
-  font-size: 40px;
-  padding: 3px 10px;
-  font-family: Viga;
+.shown .menu-icon {
+  left: -30px !important;
 }
 
-ul#navigation .title .beta-tag {
-  font-size: 12px;
-  font-family: Cairo;
-  padding: 0 5px;
-  bottom: 10px;
+.hidden {
+  width: 100%;
+}
+
+.shown {
+  width: 100%;
+}
+
+ul#navigation .logo {
+  width: 45px;
+  height: 45px;
   position: relative;
-  border-radius: 5px;
-  background-color: #fe3d3e;
-  margin-left: 2px;
+  top: -5px;
+  background: url('../images/logo.png') no-repeat center center;
+  background-size: cover;
+  float: left;
 }
 
 ul#navigation .menu {
-  padding-left: 120px;
+  float: left;
+  margin-top: 3px;
+  margin-left: 10px;
+  transition-duration: 250ms;
+  animation-timing-function: ease-in-out;
 }
 
-ul#navigation li {
+ul#navigation li.item {
   display: inline;
   font-size: 18px;
 }
@@ -131,54 +130,69 @@ ul#navigation li a {
   transition-duration: 0.25s;
 }
 
-ul#navigation li a:hover {
+ul#navigation li.item a:hover {
   color: #C6C6C6;
 }
 
-ul#navigation li.right {
-  float: right;
-  padding-right: 5px;
-}
-
 ul#navigation li+li:before {
-  color: #fe3d3e;
+  color: var(--main-color);
   font-weight: bold;
   content: "/\00a0";
   padding: 4px;
 }
 
-ul#navigation li.right+li.right:before {
+ul.right li.icon:before {
   display: none;
 }
 
-ul#navigation ul.center li+li:before {
-  display: none;
+ul#navigation .right-menu {
+  float: right;
+  position: relative;
+  top: -2px;
+  height: 40px;
 }
 
-ul#navigation ul.center {
-  width: 240px;
-  position: absolute;
-  margin: auto;
-  left: 0; right: 0; top: 0; bottom: 0;
-  padding: 13px 0px;
-  transition-duration: 250ms;
-}
-
-i.menu {
+ul.right li.icon {
+  width: 40px;
+	height: 40px;
+	line-height: 38px;
+	text-align: center;
   color: #fff;
-  font-size: 32px;
-  background-color: #fe3d3e;
-  width: 50px; height: 50px;
-  border-bottom: 3px solid #c93035;
-  border-radius: 3px;
-  position: fixed;
-  right: 10px;
-  top: 10px;
-  z-index: 11;
-  line-height: 50px;
-  text-align: center;
-  cursor: pointer;
+  background-color: var(--main-color);
+  border-bottom: 3px solid var(--main-color-shade);
+  box-sizing: border-box;
+  transition-duration: 0.25s;
+  display: inline-block;
+  border-radius: 5px;
+  font-size: 1.4em;
+  margin-left: 5px;
+}
+
+ul.right li.text {
+  display: inline-block;
+  position: relative;
+  top: -3px;
+}
+
+ul.right li.text span span {
+  position: relative;
+  top: -2px;
+}
+
+ul.right li.icon:hover {
+  background-color: var(--main-color-shade);
+}
+
+ul#navigation .menu-icon {
   display: none;
+  font-size: 24px;
+  width: 60px;
+  height: 60px;
+  position: absolute;
+  left: 0; top: 0;
+  padding: 12px 20px;
+  transition-duration: 250ms;
+  animation-timing-function: ease-in-out;
 }
 
 /* Header */
@@ -189,7 +203,12 @@ i.menu {
   }
 
   div#uvod .content {
+    height: 250px !important;
     width: 250px !important;
+  }
+
+  div#uvod .logo {
+    margin: 0 0 !important;
   }
 }
 
@@ -198,13 +217,13 @@ div#uvod {
   height: 100vh;
   position: relative;
   top: 0px; left: 0px;
-  background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('../../assets/images/header-bgs/developer.jpg') no-repeat center center;
+  background: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)), url('../../assets/images/header-bgs/developer.jpg') no-repeat center center;
   background-size: cover;
 }
 
 div#uvod .content {
-  width: 650px;
-  height: 250px;
+  width: 300px;
+  height: 400px;
   position: absolute;
   left: 0; right: 0; top: 0; bottom: 0;
   margin: auto;
@@ -213,13 +232,14 @@ div#uvod .content {
 div#uvod .logo {
   float: left;
   width: 250px;
+  margin: 0 25px;
 }
 
 div#uvod .text {
   margin: auto;
   height: 110px;
-  position: absolute;
-  left: 200px; right: 0; top: 0; bottom: 0;
+  position: relative;
+  text-align: center;
 }
 
 div#uvod p {
@@ -228,20 +248,22 @@ div#uvod p {
 }
 
 div#uvod .title {
-  font-size: 60px;
+  font-size: 48px;
   font-weight: bold;
 }
 
 div#uvod .subtitle {
-  font-size: 42px;
+  font-size: 36px;
+  transition-duration: 100ms;
 }
 
 div#uvod .animated {
-  color: #fe3d3e;
+  color: var(--main-color);
+  position: relative;  
 }
 
 .typed-cursor {
-  color: #fe3d3e;
+  color: var(--main-color);
   animation: cursor 1s infinite;
 }
 
@@ -257,11 +279,60 @@ div#uvod .animated {
   }
 }
 
+div#uvod .scroll {
+  bottom: 0;
+  position: absolute;
+  width: 100%;
+  height: 100px;
+  background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.9) 100%);
+}
+
+div#uvod .scroll p.arrow {
+  text-align: center;
+  position: absolute;
+  bottom: 0;
+  left: 0; right: 0;
+  margin: 0 auto;
+  width: 100px;
+  height: 30px;
+  margin-bottom: 10px;
+  font-size: 24px;
+  animation: bounce 2s infinite;
+  transition-duration: 0.25s;
+  opacity: 0.5;
+  color: #fe3d3e;
+  cursor: pointer;
+}
+
+div#uvod .scroll p.arrow:hover {
+	opacity: 1;
+}
+
+@keyframes bounce {
+	0%, 20%, 50%, 80%, 100% {
+    transform: translateY(0);
+  }
+	40% {
+    transform: translateY(-5px);
+  }
+	60% {
+    transform: translateY(-5px);
+  }
+}
+
+div#uvod .scroll p.description {
+  text-align: center;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  margin-bottom: 55px;
+}
+
 /* Section */
 
 div.section {
   position: relative;
-  padding: 100px 10%;
+  padding: 0;
   min-width: 90%;
   width: 100%;
 }
@@ -270,6 +341,7 @@ div.section h1 {
   font-size: 38px;
   text-align: center;
   padding-bottom: 0px;
+  margin-top: 50px;
 }
 
 div.section h3 {
@@ -292,7 +364,7 @@ div.section h3 {
 }
 
 div#kdo-jsem {
-  background-color: #191919;
+  background: /*url('../../assets/images/bg-square.png') repeat*/ #191919;
   color: #fff;
 }
 
@@ -302,7 +374,7 @@ div#kdo-jsem .row div p.paragraph-title {
 }
 
 div#kdo-jsem .row div p.paragraph-title:before {
-  color: #fe3d3e;
+  color: var(--main-color);
   font-weight: bold;
   content: "/\00a0";
   padding-right: 10px;
@@ -314,7 +386,7 @@ div#kdo-jsem .row div .info {
 }
 
 div#kdo-jsem .row div .info li:before {
-  color: #fe3d3e;
+  color: var(--main-color);
   font-weight: bold;
   content: "/\00a0";
   padding-right: 10px;
@@ -323,7 +395,7 @@ div#kdo-jsem .row div .info li:before {
 div.timeline {
   width: 100%;
   border: 0px;
-  border-left: 3px solid #fe3d3e;
+  border-left: 3px solid var(--main-color);
 }
 
 div.timeline .item {
@@ -343,7 +415,7 @@ div.timeline .item p {
 
 div.timeline .item .title {
   font-size: 18px;
-  border-bottom: 2px #fe3d3e;
+  border-bottom: 2px var(--main-color);
   margin: 0;
   font-weight: 500;
 }
@@ -356,7 +428,7 @@ div.timeline .item .date {
 }
 
 div.timeline .item .date span {
-  color: #fe3d3e;
+  color: var(--main-color);
   font-weight: bold;
 }
 
@@ -375,8 +447,8 @@ div.timeline .item:before {
   border-radius: 10px;
   width: 20px;
   height: 20px;
-  left: 6px;
-  border: 2px solid #fe3d3e;
+  left: -31px;
+  border: 2px solid var(--main-color);
   z-index: 2;
 }
 
@@ -387,42 +459,124 @@ div#projekty {
   color: #191919;
 }
 
-div#projekty div .col-6 .avatar {
-  border-radius: 50%;
-  width: 150px;
-  border: 0px;
-  transform: translateX(-50%);
-  position: relative;
-  left: 50%;
-}
-
-div#projekty div .col-6 .title {
-  font-size: 21px;
-  text-align: center;
-  font-weight: bolder;
-  margin-bottom: 10px;
-  margin-top: 20px;
-}
-
-div#projekty div .col-6 .description {
-  text-align: center;
+div#projekty .projects {
   width: 100%;
-  padding: 0 10%;
 }
 
-div#projekty div .col-6 .center {
-  width: 143px;
+#projekty .row {
+  margin: 0 !important;
+}
+
+#projekty .row .col-sm {
+  height: 300px;
+  background-color: #191919;
+}
+
+#projekty .row .col-sm .description {
+  margin: auto;
+  position: absolute;
+  top: 0; bottom: 0; left: 0; right: 0;
+  height: 70px;
+  width: 90%;
+}
+
+#projekty .row .col-sm p {
+  opacity: 0;
+  transition-duration: 250ms;
+  color: #fff;
+  text-align: center;
+  margin: 0;
+  line-height: 120%;
+}
+
+#projekty .row .col-sm .title {
+  font-size: 36px;
+  font-weight: bolder;
+}
+
+#projekty .row .col-sm .datum {
+  font-weight: lighter;
+  font-style: italic;
+  font-size: 18px;
+}
+
+#projekty .row .col-sm .logo {
   position: absolute;
   margin: auto;
-  left: 0; right: 0;
+  top: 0; left: 0; right: 0; bottom: 0;
+  height: 150px;
+  transition-duration: 250ms;
 }
 
-div#projekty div .col-6 {
-  padding-bottom: 50px;
+#projekty .row .col-sm:hover .logo {
+  opacity: 0;
 }
+
+#projekty .row .col-sm:hover p {
+  opacity: 1;
+}
+
+#projekty .row .col-sm:hover ul {
+  opacity: 1;
+}
+
+#projekty .row .col-sm.kettu {
+  background: url('../images/projects/kettu.png') no-repeat center center;
+  background-size: cover;
+}
+
+#projekty .row .col-sm.indian {
+  background: url('../images/projects/indian.png') no-repeat center center;
+  background-size: cover;
+}
+
+#projekty .row .col-sm.craftmania {
+  background: url('../images/projects/craftmania.jpeg') no-repeat center center;
+  background-size: cover;
+}
+
+#projekty .row .col-sm .overlay {
+  transition-duration: 250ms;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background-color: #000;
+  opacity: 0;
+  left: 0;
+}
+
+#projekty .row .col-sm:hover .overlay {
+  opacity: 0.5;
+}
+
+#projekty .row .col-sm ul {
+  position: absolute;
+  bottom: 0; left: 0;
+  padding: 0;
+  text-align: center;
+  list-style-type: none;
+  color: #fff;
+  margin-bottom: 10px;
+  width: 100%;
+  opacity: 0;
+  transition-duration: 250ms;
+}
+
+#projekty .row .col-sm ul li {
+  display: inline;
+  margin: 0;
+}
+
+#projekty .row .col-sm ul li+li:before {
+  color: #b1b1b1;
+  font-weight: bold;
+  content: "-";
+  padding: 4px;
+}
+
 
 @media (max-width: 850px) { 
-  #projekty .row .col-6 {
+  #projekty .row .col-sm {
     flex: 0 0 100% !important;
     max-width: 100% !important;
     padding-bottom: 150px;
@@ -431,7 +585,7 @@ div#projekty div .col-6 {
 
 /* Kontakt */
 div#kontakt {
-  background-color: #fe3d3e;
+  background-color: var(--main-color);
   color: #fff;
 }
 
@@ -449,6 +603,57 @@ div#kontakt .social-icons li .fa {
   line-height: 58px;
   border-bottom: 3px solid #101010;
   font-size: 28px;
+}
+
+/* Spotify */
+
+div#spotify {
+  background-color: #1ed760;
+  color: #fff;
+}
+
+div#spotify .spotify {
+  width: 400px;
+  height: 400px;
+}
+
+/* Discord */
+div#discord {
+  background: url('../../assets/images/discord-bg.png') #7289DA;
+  background-size: 270px 350px;
+  padding: 50px 10% !important;
+  color: #fff;
+  position: relative;
+}
+
+div#discord .button {
+  border: 2px solid #fff;
+  padding: 10px 20px;
+  color: #fff;
+  float: right;
+  border-radius: 26px;
+  font-size: 18px;
+  position: relative;
+  top: -55px;
+  transition-duration: 250ms;
+}
+
+div#discord .button:hover {
+  color: #7289DA;
+  background: #fff;
+  text-decoration: none !important;
+}
+
+div#discord p {
+  margin: 0;
+}
+
+div#discord p.title {
+  font-size: 24px;
+}
+
+div#discord p.subtitle {
+  font-size: 18px;
 }
 
 /* Footer */
@@ -492,7 +697,7 @@ div#footer:before {
 }
 
 /*div#footer:before{
-  border-left: 99vw solid #fe3d3e;
+  border-left: 99vw solid var(--main-color);
   border-bottom: 100px solid transparent;
   border-right:0;
   border-top:0;
@@ -545,10 +750,14 @@ div#footer .content .right li a {
 
 div#footer .copyright {
   background: #101010;
-  padding: 5px 10px;
-  text-align: center;
+  padding: 20px 15%;
+  text-align: left;
   width: 100%;
   bottom: 0px;
+}
+
+div#footer .copyright p {
+  margin: 0;
 }
 
 div#footer .copyright ul {
@@ -567,7 +776,7 @@ div#footer .copyright ul li.right {
 }
 
 div#footer .copyright ul li+li:before {
-  color: #fe3d3e;
+  color: var(--main-color);
   font-weight: bold;
   content: "/\00a0";
   padding: 3px;
@@ -575,4 +784,8 @@ div#footer .copyright ul li+li:before {
 
 div#footer .copyright ul li a {
   color: #ddd;
+}
+
+div#footer .copyright .copy-text {
+  color: #7e7e7e;
 }
