--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,4 @@
-/*
-
-    Lukáš Pánek - Hlavní CSS soubor
-
-*/
-
-@import url('https://fonts.googleapis.com/css?family=Barlow');
+@import url('https://fonts.googleapis.com/css?family=Cairo|Viga');
 
 /* Body a ostatní */
 
@@ -14,7 +8,7 @@
 }
 
 * {
-  font-family: Barlow;
+  font-family: Cairo;
 }
 
 body {
@@ -26,51 +20,74 @@ body {
   margin-bottom: 5px !important;
 }
 
-
 /* Navigation bar */
 
 @media (max-width: 1350px) { 
-  ul#navigation {
-    padding: 10px 100px !important;
-  }
-}
-
-@media (max-width: 980px) { 
-  div.right-menu {
+  ul#navigation .center {
     display: none;
   }
 }
 
-@media (max-width: 650px) { 
+@media (max-width: 850px) { 
+  ul#navigation {
+    padding-right: 0 !important;
+  }
+  ul#navigation .right {
+    display: none;
+  }
+  ul#navigation .title {
+    display: none;
+  }
   ul#navigation .menu {
-    margin-left: 70px !important;
-    margin-top: 6px !important;
+    padding-left: 0 !important;
+    text-align: center;
   }
+}
 
-  ul#navigation.shown .menu {
-    margin-left: 40px !important;
+@media (max-width: 550px) { 
+  ul#navigation li {
+    display: block !important;
+    padding: 10px;
   }
-
-  ul#navigation .logo {
-    display: none;
+  ul#navigation li a {
+    color: #191919 !important;
   }
-
-  .hidden {
-    width: 60px !important;
+  ul#navigation li+li:before {
+    display: none !important;
   }
-
-  .shown {
-    width: 100% !important;
-    overflow-x: scroll !important;
+  ul#navigation li.right {
+    display: none !important;
   }
-
   ul#navigation {
-    padding: 10px 3px !important;
-    white-space: nowrap;
+    background-color: #fff !important;
+    padding-right: 0px !important;
+    height: 0px !important;
   }
 
-  ul#navigation .menu-icon {
-    display: inline-block !important;
+  ul#navigation.hidden {
+    height: 0px;
+    padding: 0px !important;
+  }
+  
+  ul#navigation.hidden li {
+    display: none !important;
+  }
+  
+  ul#navigation.shown {
+    height: auto !important;
+    padding: 20px 0px !important;
+  }
+  
+  ul#navigation.shown li {
+    display: block !important;
+  }
+
+  ul#navigation.shown li.right {
+    display: none !important;
+  }
+
+  i.menu {
+    display: block !important;
   }
 }
 
@@ -79,47 +96,36 @@ ul#navigation {
   z-index: 10;
   list-style-type: none;
   color: #fff;
-  margin: 0;
-  padding: 10px 300px;
-  height: 60px;
+  margin: 0; padding: 20px 0px;
+  padding-right: 25px;
+  width: 100%;
   transition-duration: 250ms;
-  animation-timing-function: ease-in-out;
-  background: #191919;
-  border-bottom: 5px solid #101010;
-  overflow: hidden;
 }
 
-.shown .menu-icon {
-  left: -30px !important;
+ul#navigation .title {
+  position: absolute;
+  left: 0; top: 0;
+  font-size: 40px;
+  padding: 3px 10px;
+  font-family: Viga;
 }
 
-.hidden {
-  width: 100%;
-}
-
-.shown {
-  width: 100%;
-}
-
-ul#navigation .logo {
-  width: 45px;
-  height: 45px;
+ul#navigation .title .beta-tag {
+  font-size: 12px;
+  font-family: Cairo;
+  padding: 0 5px;
+  bottom: 10px;
   position: relative;
-  top: -5px;
-  background: url('../images/logo.png') no-repeat center center;
-  background-size: cover;
-  float: left;
+  border-radius: 5px;
+  background-color: var(--main-color);
+  margin-left: 2px;
 }
 
 ul#navigation .menu {
-  float: left;
-  margin-top: 3px;
-  margin-left: 10px;
-  transition-duration: 250ms;
-  animation-timing-function: ease-in-out;
+  padding-left: 120px;
 }
 
-ul#navigation li.item {
+ul#navigation li {
   display: inline;
   font-size: 18px;
 }
@@ -130,8 +136,13 @@ ul#navigation li a {
   transition-duration: 0.25s;
 }
 
-ul#navigation li.item a:hover {
+ul#navigation li a:hover {
   color: #C6C6C6;
+}
+
+ul#navigation li.right {
+  float: right;
+  padding-right: 5px;
 }
 
 ul#navigation li+li:before {
@@ -141,58 +152,38 @@ ul#navigation li+li:before {
   padding: 4px;
 }
 
-ul.right li.icon:before {
+ul#navigation li.right+li.right:before {
   display: none;
 }
 
-ul#navigation .right-menu {
-  float: right;
-  position: relative;
-  top: -2px;
-  height: 40px;
-}
-
-ul.right li.icon {
-  width: 40px;
-	height: 40px;
-	line-height: 38px;
-	text-align: center;
-  color: #fff;
-  background-color: var(--main-color);
-  border-bottom: 3px solid var(--main-color-shade);
-  box-sizing: border-box;
-  transition-duration: 0.25s;
-  display: inline-block;
-  border-radius: 5px;
-  font-size: 1.4em;
-  margin-left: 5px;
-}
-
-ul.right li.text {
-  display: inline-block;
-  position: relative;
-  top: -3px;
-}
-
-ul.right li.text span span {
-  position: relative;
-  top: -2px;
-}
-
-ul.right li.icon:hover {
-  background-color: var(--main-color-shade);
-}
-
-ul#navigation .menu-icon {
+ul#navigation ul.center li+li:before {
   display: none;
-  font-size: 24px;
-  width: 60px;
-  height: 60px;
+}
+
+ul#navigation ul.center {
+  width: 240px;
   position: absolute;
-  left: 0; top: 0;
-  padding: 12px 20px;
+  margin: auto;
+  left: 0; right: 0; top: 0; bottom: 0;
+  padding: 13px 0px;
   transition-duration: 250ms;
-  animation-timing-function: ease-in-out;
+}
+
+i.menu {
+  color: #fff;
+  font-size: 32px;
+  background-color: var(--main-color);
+  width: 50px; height: 50px;
+  border-bottom: 3px solid #c93035;
+  border-radius: 3px;
+  position: fixed;
+  right: 10px;
+  top: 10px;
+  z-index: 11;
+  line-height: 50px;
+  text-align: center;
+  cursor: pointer;
+  display: none;
 }
 
 /* Header */
@@ -203,12 +194,7 @@ ul#navigation .menu-icon {
   }
 
   div#uvod .content {
-    height: 250px !important;
     width: 250px !important;
-  }
-
-  div#uvod .logo {
-    margin: 0 0 !important;
   }
 }
 
@@ -222,8 +208,8 @@ div#uvod {
 }
 
 div#uvod .content {
-  width: 300px;
-  height: 400px;
+  width: 650px;
+  height: 250px;
   position: absolute;
   left: 0; right: 0; top: 0; bottom: 0;
   margin: auto;
@@ -232,14 +218,13 @@ div#uvod .content {
 div#uvod .logo {
   float: left;
   width: 250px;
-  margin: 0 25px;
 }
 
 div#uvod .text {
   margin: auto;
   height: 110px;
-  position: relative;
-  text-align: center;
+  position: absolute;
+  left: 200px; right: 0; top: 0; bottom: 0;
 }
 
 div#uvod p {
@@ -248,18 +233,16 @@ div#uvod p {
 }
 
 div#uvod .title {
-  font-size: 48px;
+  font-size: 60px;
   font-weight: bold;
 }
 
 div#uvod .subtitle {
-  font-size: 36px;
-  transition-duration: 100ms;
+  font-size: 42px;
 }
 
 div#uvod .animated {
   color: var(--main-color);
-  position: relative;  
 }
 
 .typed-cursor {
@@ -332,7 +315,7 @@ div#uvod .scroll p.description {
 
 div.section {
   position: relative;
-  padding: 0;
+  padding: 100px 10%;
   min-width: 90%;
   width: 100%;
 }
@@ -341,7 +324,6 @@ div.section h1 {
   font-size: 38px;
   text-align: center;
   padding-bottom: 0px;
-  margin-top: 50px;
 }
 
 div.section h3 {
@@ -447,7 +429,7 @@ div.timeline .item:before {
   border-radius: 10px;
   width: 20px;
   height: 20px;
-  left: -31px;
+  left: 6px;
   border: 2px solid var(--main-color);
   z-index: 2;
 }
@@ -459,124 +441,42 @@ div#projekty {
   color: #191919;
 }
 
-div#projekty .projects {
-  width: 100%;
+div#projekty div .col-6 .avatar {
+  border-radius: 50%;
+  width: 150px;
+  border: 0px;
+  transform: translateX(-50%);
+  position: relative;
+  left: 50%;
 }
 
-#projekty .row {
-  margin: 0 !important;
-}
-
-#projekty .row .col-sm {
-  height: 300px;
-  background-color: #191919;
-}
-
-#projekty .row .col-sm .description {
-  margin: auto;
-  position: absolute;
-  top: 0; bottom: 0; left: 0; right: 0;
-  height: 70px;
-  width: 90%;
-}
-
-#projekty .row .col-sm p {
-  opacity: 0;
-  transition-duration: 250ms;
-  color: #fff;
+div#projekty div .col-6 .title {
+  font-size: 21px;
   text-align: center;
-  margin: 0;
-  line-height: 120%;
-}
-
-#projekty .row .col-sm .title {
-  font-size: 36px;
   font-weight: bolder;
+  margin-bottom: 10px;
+  margin-top: 20px;
 }
 
-#projekty .row .col-sm .datum {
-  font-weight: lighter;
-  font-style: italic;
-  font-size: 18px;
+div#projekty div .col-6 .description {
+  text-align: center;
+  width: 100%;
+  padding: 0 10%;
 }
 
-#projekty .row .col-sm .logo {
+div#projekty div .col-6 .center {
+  width: 143px;
   position: absolute;
   margin: auto;
-  top: 0; left: 0; right: 0; bottom: 0;
-  height: 150px;
-  transition-duration: 250ms;
+  left: 0; right: 0;
 }
 
-#projekty .row .col-sm:hover .logo {
-  opacity: 0;
+div#projekty div .col-6 {
+  padding-bottom: 50px;
 }
-
-#projekty .row .col-sm:hover p {
-  opacity: 1;
-}
-
-#projekty .row .col-sm:hover ul {
-  opacity: 1;
-}
-
-#projekty .row .col-sm.kettu {
-  background: url('../images/projects/kettu.png') no-repeat center center;
-  background-size: cover;
-}
-
-#projekty .row .col-sm.indian {
-  background: url('../images/projects/indian.png') no-repeat center center;
-  background-size: cover;
-}
-
-#projekty .row .col-sm.craftmania {
-  background: url('../images/projects/craftmania.jpeg') no-repeat center center;
-  background-size: cover;
-}
-
-#projekty .row .col-sm .overlay {
-  transition-duration: 250ms;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  background-color: #000;
-  opacity: 0;
-  left: 0;
-}
-
-#projekty .row .col-sm:hover .overlay {
-  opacity: 0.5;
-}
-
-#projekty .row .col-sm ul {
-  position: absolute;
-  bottom: 0; left: 0;
-  padding: 0;
-  text-align: center;
-  list-style-type: none;
-  color: #fff;
-  margin-bottom: 10px;
-  width: 100%;
-  opacity: 0;
-  transition-duration: 250ms;
-}
-
-#projekty .row .col-sm ul li {
-  display: inline;
-  margin: 0;
-}
-
-#projekty .row .col-sm ul li+li:before {
-  color: #b1b1b1;
-  font-weight: bold;
-  content: "-";
-  padding: 4px;
-}
-
 
 @media (max-width: 850px) { 
-  #projekty .row .col-sm {
+  #projekty .row .col-6 {
     flex: 0 0 100% !important;
     max-width: 100% !important;
     padding-bottom: 150px;
@@ -617,44 +517,6 @@ div#spotify .spotify {
   height: 400px;
 }
 
-/* Discord */
-div#discord {
-  background: url('../../assets/images/discord-bg.png') #7289DA;
-  background-size: 270px 350px;
-  padding: 50px 10% !important;
-  color: #fff;
-  position: relative;
-}
-
-div#discord .button {
-  border: 2px solid #fff;
-  padding: 10px 20px;
-  color: #fff;
-  float: right;
-  border-radius: 26px;
-  font-size: 18px;
-  position: relative;
-  top: -55px;
-  transition-duration: 250ms;
-}
-
-div#discord .button:hover {
-  color: #7289DA;
-  background: #fff;
-  text-decoration: none !important;
-}
-
-div#discord p {
-  margin: 0;
-}
-
-div#discord p.title {
-  font-size: 24px;
-}
-
-div#discord p.subtitle {
-  font-size: 18px;
-}
 
 /* Footer */
 
@@ -750,14 +612,10 @@ div#footer .content .right li a {
 
 div#footer .copyright {
   background: #101010;
-  padding: 20px 15%;
-  text-align: left;
+  padding: 5px 10px;
+  text-align: center;
   width: 100%;
   bottom: 0px;
-}
-
-div#footer .copyright p {
-  margin: 0;
 }
 
 div#footer .copyright ul {
@@ -784,8 +642,4 @@ div#footer .copyright ul li+li:before {
 
 div#footer .copyright ul li a {
   color: #ddd;
-}
-
-div#footer .copyright .copy-text {
-  color: #7e7e7e;
 }
